feat: support starters with optional modules, plus a way to add them later
Some starters (java-starter) let you pick which parts to generate at
scaffold time. Adds the manifest support for that (modules, markers,
whenAbsent removals) and a new --add-modules command that extends an
already-generated app afterwards, by diffing two throwaway regenerations
against the real one and patching only what's safe to patch automatically.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>